--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="pull_up">Подтягивания</string>
     <string name="leg_press">Жим ногами</string>
     <string name="squat">Приседания</string>
+    <string name="run">Бег</string>
 </resources>
