--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,11 @@
     <string name="category_leg">Ноги</string>
     <string name="category_chest">Грудь</string>
     <string name="category_shoulder">Плечи</string>
+
+    <string name="edit">Редактировать</string>
+    <string name="cancel">Отмена</string>
+    <string name="add">Добавить</string>
+    <string name="copy">Копировать</string>
+    <string name="move">Переместить</string>
+    <string name="delete">Удалить</string>
 </resources>
