--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="copy">Копировать</string>
     <string name="move">Переместить</string>
     <string name="delete">Удалить</string>
+
+    <string name="select_category">Выберите категорию:</string>
+    <string name="select_exercise">Выберете упражнение:</string>
 </resources>
