--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,5 @@
     <string name="delete">Удалить</string>
 
     <string name="select_category">Выберите категорию:</string>
-    <string name="select_exercise">Выберете упражнение:</string>
+    <string name="select_exercise">Выберите упражнение:</string>
 </resources>
